force-clientforce/main/default/objects/C360_Tech_Event__e/C360_Tech_Event__e.object-meta.xml
<CustomObject>
    <label>C360_Tech_Event</label>
    <pluralLabel>C360_Tech_Events</pluralLabel>
</CustomObject>