force-clientforce/main/default/objects/C360_Tech_Event__e/fields/Body_Json__c.field-meta.xml
<CustomField>
    <fullName>Body_Json__c</fullName>
    <label>Body_Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>