force-clientforce/main/default/objects/C360_Tech_Event__e/fields/TR_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>TR_Object_Id__c</fullName>
    <label>TR_Object_Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>